[gd_scene load_steps=7 format=3 uid="uid://qmblntpr4o7d"]

[ext_resource type="Script" uid="uid://cmksndmgxqlw8" path="res://scripts/level.gd" id="1_0hvfg"]
[ext_resource type="PackedScene" uid="uid://dlukhtdc5xlsr" path="res://scenes/entities/player.tscn" id="2_f3084"]
[ext_resource type="PackedScene" uid="uid://cauuyn3ddtg0p" path="res://scenes/pipe.tscn" id="3_ulkkr"]
[ext_resource type="PackedScene" uid="uid://ly3n4ywnpm82" path="res://scenes/entities/enemies/easy_enemy.tscn" id="4_vrwtg"]

[sub_resource type="GDScript" id="GDScript_w8frs"]
script/source = "class_name ConsumptionScan extends Area2D
"

[sub_resource type="NavigationPolygon" id="NavigationPolygon_mx8sn"]
vertices = PackedVector2Array(192, 108, 2.921875, 108, 2.078125, 2, 192, 2)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 202, -8, 202, 118, -7, 118)])

[node name="Tutorial" type="Node2D" groups=["Level"]]
script = ExtResource("1_0hvfg")
next_level = "uid://c5dkasltva224"
allowed_movement_states = 1
randomized_spawn = false

[node name="Player" parent="." instance=ExtResource("2_f3084")]
position = Vector2(76, 97)

[node name="Camera" type="Camera2D" parent="Player" groups=["Camera"]]
zoom = Vector2(10, 10)
limit_left = 0
limit_top = 0
limit_right = 192
limit_bottom = 108

[node name="Chest" parent="." instance=ExtResource("3_ulkkr")]
position = Vector2(100, 100)

[node name="Border" type="StaticBody2D" parent="." groups=["Border"]]
collision_layer = 5
collision_mask = 7

[node name="Border" type="CollisionPolygon2D" parent="Border"]
polygon = PackedVector2Array(0, 1, 0, 0, 192, 0, 192, 108, 0, 108, 0, 3, 1, 3, 1, 107, 191, 107, 191, 1)

[node name="BorderArea" type="Area2D" parent="Border" groups=["Border"]]
collision_layer = 5
collision_mask = 7

[node name="Border" type="CollisionPolygon2D" parent="Border/BorderArea"]
polygon = PackedVector2Array(0, 2, 0, 0, 192, 0, 192, 108, 0, 108, 0, 3, 2, 3, 2, 106, 190, 106, 190, 2)

[node name="ConsumptionScan" type="Area2D" parent="."]
script = SubResource("GDScript_w8frs")

[node name="CollectionArea" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_mx8sn")

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("4_vrwtg")]
position = Vector2(51, 72)

[node name="Enemy2" parent="Enemies" instance=ExtResource("4_vrwtg")]
position = Vector2(93, 44)

[node name="Enemy3" parent="Enemies" instance=ExtResource("4_vrwtg")]
position = Vector2(142, 72)

[node name="Hooks" type="Node2D" parent="."]

[connection signal="body_entered" from="Border/BorderArea" to="." method="_on_border_area_body_entered"]
[connection signal="body_entered" from="ConsumptionScan" to="." method="_on_consumption_scan_body_entered"]
